fix(text) wrap

--- a/src/components/component.module.scss
+++ b/src/components/component.module.scss
@@ -35,6 +35,8 @@ select {
     @media  screen and (max-width: 550px) {
         h1 {
             font-size: medium;
+            word-wrap: break-word;
+            
         }
     }
 
